--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@
     <main class="tmpl-post">
       <h1>About Me</h1>
 
-<p>I am a person that writes stuff.</p>
+<p>Hi, my name is Luke. I'll update this soon!</p>
 
 
 <hr>
