deploy: 39f35854fa9db37ad252e47afbfefd00cef2fb7d

--- a/page-list/index.html
+++ b/page-list/index.html
@@ -29,7 +29,7 @@
   <tbody>
   <tr>
     <td><a href="/posts/2021-02-27-blog-setup/"><code>/posts/2021-02-27-blog-setup/</code></a></td>
-    <td>luke.petre.net quick start</td>
+    <td>Site Setup</td>
   </tr>
   <tr>
     <td><a href="/about/"><code>/about/</code></a></td>
